fixed box overflow

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -222,6 +222,10 @@ input[type="button"]{
     margin: 0px;
   }
 
+  .asia{
+    height: auto;
+  }
+
   input[type="button"]{
     margin: 0px;
   }
